almost done, 2 sections to go

--- a/index.html
+++ b/index.html
@@ -7,7 +7,44 @@
     <link rel="stylesheet" href="./style.css">
     <title>Landing Page project</title>
 </head>
+
 <body>
+    <nav class ="header black">
+        <ul>
+            <li class="logo"><a href="">Header Logo</a></li>
+            <li class="right"><a href="">Header Link1</a></li>
+            <li><a href="">Header Link2</a></li>
+            <li><a href="">Header Link3</a></li>
+        </ul>
+    </nav>
+        
+    <div class="central black">
+        <h2 class="h2">This website is awesome</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi magnam quidem amet fugit minima commodi eveniet nemo consequuntur est voluptatum. Tenetur blanditiis, unde veniam voluptatibus necessitatibus voluptatum eveniet maiores expedita?</p>
+        <button>Sign Up</button>
+        <div class="right">
+            <img src="../odin-links-and-images/images/dog.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="quote">
+        <p class="mainpara">This is an inspiring quote or a testimmonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it will look nice.</p>
+        <p class="littlepara">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="action">
+        <div class="bluesquare">
+            <div class="actionLeft">
+                <h2>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <button class="button">Sign Up</button>
+        </div>
+    </div>
     
+    <div class="footer black">
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </div>
 </body>
+
 </html>
