Finally done, I think. Now on to JS!

--- a/index.html
+++ b/index.html
@@ -11,31 +11,57 @@
 <body>
     <nav class ="header black">
         <ul>
-            <li class="logo"><a href="">Header Logo</a></li>
-            <li class="right"><a href="">Header Link1</a></li>
-            <li><a href="">Header Link2</a></li>
-            <li><a href="">Header Link3</a></li>
+            <img src="../LandingPage/yellow-dandelion.jpg" alt="" class="logo">
+            <!-- <li class="logo"><a href="">Header Logo</a></li> -->
+            <li class="right"><a href="">About</a></li>
+            <li><a href="">Contacts</a></li>
+            <li><a href="">Home</a></li>
         </ul>
     </nav>
         
     <div class="central black">
-        <h2 class="h2">This website is awesome</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi magnam quidem amet fugit minima commodi eveniet nemo consequuntur est voluptatum. Tenetur blanditiis, unde veniam voluptatibus necessitatibus voluptatum eveniet maiores expedita?</p>
-        <button>Sign Up</button>
+        <div class="centralLeft">
+            <h2 class="h2">DANDELIONS</h2>
+            <p>All you ever wanted to see about dandelions but didn't know where to look and how!<br><br>The dandelion is a common weed found in most gardens but did you know it carries some spiritual meanings? The plant is also symbolic of beauty because it can be admired as it grows or after it blooms.<br><br>It is said that if you gather the seeds and blow them into the wind, your wish will be granted by Zeus himself!</p>
+            <p><em>https://florgeous.com/dandelion-flower-meaning/</em></p>
+            <button class="buttonCentral">Sign Up</button>
+        </div>
         <div class="right">
-            <img src="../odin-links-and-images/images/dog.jpg" alt="">
+            <img src="../LandingPage/flower-6879399__340.webp" alt="" class="imgCentral">
+        </div>
+    </div>
+
+    <div class="info">
+        <h4>Some random pictures from the fields</h4>
+        <div class="cards">
+            <div>
+                <img src="../LandingPage/dandelion-gefbafe214_640.jpg" alt="" class="infoImg">
+                <span>Image by <br><a href="https://pixabay.com/users/blickpixel-52945/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=463928">Michael Schwarzenberger</a> <br>from<br> <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=463928">Pixabay</a></span>
+            </div>
+            <div>
+                <img src="../LandingPage/flowers-ge6fe6031e_640.jpg" alt="" class="infoImg">
+                <span>Image by <br><a href="https://pixabay.com/users/inspiredimages-57296/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=843584">InspiredImages</a> <br>from<br> <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=843584">Pixabay</a></span>
+            </div>
+            <div>
+                <img src="../LandingPage/dandelion-gefbafe214_640.jpg" alt="" class="infoImg">
+                <span>Image by <br><a href="https://pixabay.com/users/strh-20127400/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5975473">strh</a> <br>from<br><a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5975473">Pixabay</a></span>
+            </div>
+            <div>
+                <img src="../LandingPage/dandelion-gd7e5f9319_640.jpg" alt="" class="infoImg">
+                <span>Image by <br><a href="https://pixabay.com/users/monsterkoi-65294/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2817950">Monsterkoi</a> <br>from<br> <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2817950">Pixabay</a></span>
+            </div>
         </div>
     </div>
 
     <div class="quote">
-        <p class="mainpara">This is an inspiring quote or a testimmonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it will look nice.</p>
-        <p class="littlepara">-Thor, God of Thunder</p>
+       <p class="mainpara">When should you give someone a dandelion flower? If you need a pick-me-up, or if you want to send someone a happy thought, a dandelion flower is exactly what you’re looking for.</p>
+       <p class="littlepara"><em>https://florgeous.com/dandelion-flower-meaning</em></p>
     </div>
 
-    <div class="action">
+      <div class="action">
         <div class="bluesquare">
             <div class="actionLeft">
-                <h2>Call to action! It's time!</h3>
+                <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there</p>
             </div>
             <button class="button">Sign Up</button>
